fix template vs Figma

--- a/client-myjss/src/app/modules/general/components/contact/contact.component.html
+++ b/client-myjss/src/app/modules/general/components/contact/contact.component.html
@@ -179,7 +179,7 @@
               <img src="assets/img/icons/expertise_reconnue.svg" class="w-25" alt="Icon">
               <h3 class="h4 text-white mt-3">Expertise sur mesure</h3>
               <p class="mb-0">Le savoir-faire du JSS est basé sur plus de 125 années d’expertise et se distingue par une
-                adaptation constante aux évolutions règlementaires et technologiques.</p>
+                adaptation constante aux évolutions réglementaires et technologiques.</p>
             </div>
           </div>
         </div>
@@ -187,7 +187,7 @@
         <div class="col-12 col-md-6">
           <div class="card h-100 border-0 rounded-5 ">
             <div class="card-body pb-3">
-              <img src="assets/img/icons/Tarifs_avantageux.svg" class="w-25" alt="Icon">
+              <img src="assets/img/icons/actualites.svg" class="w-25" alt="Icon">
               <h3 class="h4 text-white mt-3">Actualités</h3>
               <p class="mb-0">Retrouvez l’ensemble des actualités de la Vie du Droit et du Chiffre dans le Journal
                 Spécial des Sociétés.</p>
