--- a/client-myjss/src/app/modules/my-services/components/description-my-account/description-my-account.component.html
+++ b/client-myjss/src/app/modules/my-services/components/description-my-account/description-my-account.component.html
@@ -1,5 +1,5 @@
 <section class="container pb-5 mb-md-3 mb-lg-4 mb-xxl-5">
-  <h2 class="h1 text-white pb-2 pb-sm-3 pb-xl-4" *ngIf="isMobile">Parcourir l'espace <br>"Mon compte"</h2>
+  <h2 class="h1 text-white pb-2 pb-sm-3 pb-xl-4" *ngIf="isMobile">Parcourir l'espace <br>« Mon compte »</h2>
   <div class="row pb-md-4 pb-xl-5 order-1 order-md-1">
     <div class="col-md-5 mb-2 mb-md-0">
       <div class="card border-0 h-100 bg-size-cover bg-position-center"
@@ -13,37 +13,34 @@
     </div>
 
     <div class="col-md-6 order-2 order-md-3">
-      <h2 class="h1 text-white pb-2 pb-sm-3 pb-xl-4" *ngIf="!isMobile">Parcourir l'espace <br>"Mon compte"</h2>
+      <h2 class="h2 text-white pb-2 pb-sm-3 pb-xl-4" *ngIf="!isMobile">Parcourir l'espace <br>« Mon compte »</h2>
       <div class="pt-4 pb-sm-4 ps-md-4 ps-xl-0">
         <div class="d-flex pb-3 mb-2 mb-xl-3">
           <div class="text-body-secondary pt-1">01</div>
           <div class="ps-3">
             <h3 class="h5 text-white">Consultation</h3>
-            <p class="mb-0 text-body-secondary">Suivi de votre dossier en ligne via MyJSS et consultation des pièces
-              obligatoires, avec une mise à jour en temps réel de l'avancement.</p>
+            <p class="mb-0 text-body-secondary">{{firstStepText}}</p>
           </div>
         </div>
         <div class="d-flex pb-3 mb-2 mb-xl-3">
           <div class="text-body-secondary pt-1">02</div>
           <div class="ps-3">
             <h3 class="h5 text-white">Gestion globale</h3>
-            <p class="mb-0">Accédez à l'ensemble de vos dossiers : commandes, devis, et suivez leur statut en temps
-              réel.</p>
+            <p class="mb-0">{{secondStepText}}</p>
           </div>
         </div>
         <div class="d-flex pb-3 mb-2 mb-xl-3">
           <div class="text-body-secondary pt-1">03</div>
           <div class="ps-3">
             <h3 class="h5 text-white">Téléchargement de vos documents</h3>
-            <p class="mb-0">Téléchargez facilement tous vos documents importants : Kbis, certificat de dépôt, acte
-              enregistré, facture et autres documents justificatifs en toute sécurité.</p>
+            <p class="mb-0">{{thirdtepText}}</p>
           </div>
         </div>
         <div class="d-flex mb-2 mb-xl-3">
           <div class="text-body-secondary pt-1">04</div>
           <div class="ps-3">
             <h3 class="h5 text-white">Accompagnement sur mesure</h3>
-            <p class="mb-0">Echangez directement en ligne avec nos équipes d’experts.</p>
+            <p class="mb-0">Échangez directement en ligne avec nos équipes d’experts.</p>
           </div>
         </div>
       </div>
