--- a/client-myjss/src/app/modules/my-services/components/document/document.component.html
+++ b/client-myjss/src/app/modules/my-services/components/document/document.component.html
@@ -35,6 +35,9 @@
   [firstJumpTo]="5" [secondJumpTo]="15"></explaination-video>
 
 <description-my-account
+  firstStepText="Suivi de votre dossier en ligne via MyJSS, avec une mise à jour en temps réel de l’avancement."
+  secondStepText="Accédez à l’ensemble de vos dossiers : commandes, devis et suivez leur statut en temps réel."
+  thirdtepText="Récupérez facilement tous vos documents."
   imageSrc="assets/img/myjss-services/documents/parcourir_mon_compte_document.webp"></description-my-account>
 
 <section class="container mt-lg-3 mt-xl-4 mt-xxl-5 pt-lg-5 pt-sm-3 pt-2">
@@ -109,7 +112,7 @@
       <div class="col">
         <div class="card h-100 border-0 rounded-5 ">
           <div class="card-body pb-3">
-            <img src="assets/img/icons/plateforme_intuitive.svg" alt="Icon">
+            <img src="assets/img/icons/traitement_rapide.png" alt="Icon">
             <h3 class="h4 text-white">Traitement rapide</h3>
             <p class="mb-0">Recevez vos documents dans les meilleurs délais.</p>
           </div>
@@ -127,7 +130,7 @@
     <div class="col-md-6 position-relative pb-3 pb-md-0 mb-2 mb-sm-3 mb-md-0">
       <div class="binded-content z-2">
         <div class="binded-item active" id="image1">
-          <img class="d-block rounded-5 w-100" src="assets/img/myjss-services/documents/gagnez_du_temps.jpg"
+          <img class="d-block rounded-5 w-100" src="assets/img/myjss-services/documents/gagnez_du_temps.png"
             alt="Image">
         </div>
       </div>
@@ -171,14 +174,13 @@
       <div class="col-lg-5 d-flex pt-3 pt-xl-0">
         <div class="card h-100 border-0 rounded-5 w-100">
           <div class="card-body pb-3 px-3">
-            <img src="assets/img/icons/Apostille.svg" alt="Icon">
-            <h3 class="h4 text-white" routerLink="/services/apostille" style="cursor: pointer;">Apostille & Légalisation
+            <img src="assets/img/icons/Formalite.svg" alt="Icon">
+            <h3 class="h4 text-white" routerLink="/services/formality" style="cursor: pointer;">Formalités légales
             </h3>
-            <p class="mb-0">Authentification et certification rapides et conformes de vos documents valables à
-              l’international.</p>
+            <p class="mb-0">Un accompagnement complet pour toutes vos formalités juridiques.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
-            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" routerLink="/services/apostille"
+            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" routerLink="/services/formality"
               aria-label="Learn more">
               <i class="ai-arrow-right"></i>
             </a>
@@ -192,12 +194,15 @@
       <div class="col-lg-5 d-flex pt-3 pt-xl-0">
         <div class="card h-100 border-0 rounded-5 w-100">
           <div class="card-body pb-3 px-3">
-            <img src="assets/img/icons/Domiciliation.svg" alt="Icon">
-            <h3 class="h4 text-white" routerLink="/services/domiciliation" style="cursor: pointer;">Domiciliation</h3>
-            <p class="mb-0">Une domiciliation au cœur de Paris avec gestion simplifiée.</p>
+            <img src="assets/img/icons/Apostille.svg" alt="Icon">
+            <h3 class="h4 text-white" routerLink="/services/apostille" style="cursor: pointer;">Apostilles &
+              Légalisations
+            </h3>
+            <p class="mb-0">Authentification et certification rapides et conformes de vos documents valables à
+              l’international.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
-            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" routerLink="/services/domiciliation"
+            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" routerLink="/services/apostille"
               aria-label="Learn more">
               <i class="ai-arrow-right"></i>
             </a>
