--- a/client-myjss/src/app/modules/my-services/components/explaination-video/explaination-video.component.html
+++ b/client-myjss/src/app/modules/my-services/components/explaination-video/explaination-video.component.html
@@ -27,7 +27,7 @@
         (click)="jumpTo( firstJumpTo)">
         <div class="card border-0 h-100 py-lg-2 py-xl-4">
           <div class="card-body ">
-            <p class="text-grey">Etape 01</p>
+            <p class="text-grey">Étape 01</p>
             <h3 class="text-white"> {{firstStepTitle}} </h3>
             <p class="mb-0 text-grey">{{firstStepDescription}}</p>
           </div>
@@ -39,7 +39,7 @@
       <a class=" card border-0 h-100 text-decoration-none" style="cursor: pointer;" (click)="jumpTo(secondJumpTo)">
         <div class="card border-0 h-100 py-lg-2 py-xl-4">
           <div class="card-body">
-            <p class="text-grey">Etape 02</p>
+            <p class="text-grey">Étape 02</p>
             <h3 class="h4 card-title mt-0 text-white">{{secondStepTitle}}</h3>
             <p class="card-text text-grey" [innerHTML]="secondStepDescription"></p>
           </div>
@@ -50,7 +50,7 @@
       <a class="card border-0 h-100 text-decoration-none" style="cursor: pointer;" (click)="jumpTo(thirdJumpTo)">
         <div class="card border-0 h-100 py-lg-2 py-xl-4">
           <div class="card-body">
-            <p class="text-grey">Etape 03</p>
+            <p class="text-grey">Étape 03</p>
             <h3 class="text-white">{{thirdStepTitle}}</h3>
             <p class="mb-0 text-grey">{{thirdStepDescription}}</p>
           </div>
