--- a/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
+++ b/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
@@ -195,9 +195,9 @@
 <!-- Second search -->
 <section class="container py-5">
   <h2 class="m-4 text-center">Guides juridiques</h2>
-  <p class="text-center">Dirigeant, professionnel du droit ou du chiffre, vous avez des questions juridiques ? <br>MyJSS
-    vous propose 1300+
-    articles mis à jour par des juristes formalistes.</p>
+  <p class="text-center">Dirigeant, professionnel du droit ou du chiffre, vous avez des questions juridiques ? <br>
+    MyJSS vous propose ses articles rédigés par nos juristes formalistes experts et mis à jour en continu avec les
+    évolutions réglementaires.</p>
   <div class="w-100 my-3 d-flex justify-content-between">
     <div class="col-12">
       <div class="input-group custom-input-group align-items-center py-0 rounded-1 row">
