--- a/client-myjss/src/app/modules/tools/components/webinars/webinars.component.html
+++ b/client-myjss/src/app/modules/tools/components/webinars/webinars.component.html
@@ -84,15 +84,15 @@
       <div class="col-md-8 order-md-2">
         <div class="d-flex flex-column h-100 card border-0 rounded-3 pt-5 px-4 px-lg-5">
           <p class="mb-4 mb-xl-5">Présidente du Journal Spécial des Sociétés, Myriam de Montis accompagne depuis plus de
-            30 ans les entreprises dans leurs démarches juridiques.
+            30 ans les entreprises dans leurs démarches juridiques.<br>
             Son expertise en annonces légales et formalités d’entreprises fait d’elle une référente dans le
-            domaine.<br />
-            Elle suit quotidiennement les évolutions réglementaires et éclaire les professionnels sur leurs obligations.
+            domaine.<br><br>
+            Elle suit quotidiennement les évolutions réglementaires et éclaire les professionnels sur leurs
+            obligations.<br>
             Grâce à son expérience, elle apporte un regard concrêt et opérationnel sur ces enjeux complexes et participe
-            aux réflexions menées par les différents acteurs réglementaires du marché.
-          </p>
-          <p class="mb-4 mb-xl-5">À travers nos webinaires, Myriam de Montis décrypte entre autre le Guichet unique et
-            répond aux questions des participants.
+            aux réflexions menées par les différents acteurs réglementaires du marché.<br><br>
+            À travers nos webinaires, Myriam de Montis décrypte entre autre le Guichet unique et
+            répond aux questions des participants.<br><br>
             Ne manquez pas la prochaine édition !
           </p>
         </div>
@@ -104,7 +104,7 @@
 <section class="container mb-lg-2 mt-lg-3 my-xl-4 my-xxl-5">
   <div class="d-md-flex align-items-center justify-content-between pt-2 pt-sm-3 pb-3 mt-md-3 mb-3 mb-lg-4">
     <div class="d-flex align-items-center mb-4 mb-md-0">
-      <h2 class="h2 mb-0">Les grands moments d'un webinaire</h2>
+      <h2 class="h2 mb-0">Les temps forts du webinaire</h2>
       <div class="text-warning flex-shrink-0 ps-sm-1 ms-3">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
           <path
