--- a/client-myjss/src/app/modules/my-services/components/domiciliation/domiciliation.component.html
+++ b/client-myjss/src/app/modules/my-services/components/domiciliation/domiciliation.component.html
@@ -31,11 +31,15 @@
   firstStepTitle="Choisissez votre formule"
   firstStepDescription="Sélectionnez le type de renvoi de courrier (postal, digital ou les deux) et la langue (FR/EN) de rédaction de votre contrat."
   secondStepTitle="Téléversez les pièces justificatives"
-  secondStepDescription="Déposez les pièces nécessaire à l'établissement de votre contrat de domiciliation directement sur le site. Ces pièces varient si c'est une société ou une succursale à domicilier."
+  secondStepDescription="Déposez les pièces nécessaires à l'établissement de votre contrat de domiciliation directement sur le site. Ces pièces varient si c'est une société ou une succursale à domicilier."
   thirdStepTitle="Recevez votre contrat par email"
   thirdStepDescription="Dès la signature de votre contrat, il vous est envoyé par mail et votre société est domiciliée."></explaination-video>
 
-<description-my-account imageSrc="assets/img/parcourir_mon_compte_accueil.webp"></description-my-account>
+<description-my-account
+  firstStepText="Suivi de votre dossier en ligne via MyJSS et consultation des pièces obligatoires, avec une mise à jour en temps réel de l’avancement."
+  secondStepText="Accédez à l’ensemble de vos dossiers : commandes, devis, et suivez leur statut en temps réel."
+  thirdtepText="Téléchargez facilement tous vos documents importants : attestations de parution, factures, témoins de publication, et autres pièces justificatives en toute sécurité."
+  imageSrc="assets/img/parcourir_mon_compte_accueil.webp"></description-my-account>
 
 <section class="container mt-lg-3 mt-xl-4 mt-xxl-5 pt-lg-5 pt-sm-3 pt-2">
   <div class="bg-yellow-custom rounded-5 overflow-hidden mt-2 mt-sm-4 mt-lg-5">
@@ -189,7 +193,7 @@
   <div class="container py-3 py-sm-4 py-lg-5 my-md-2 my-lg-3 my-xl-4 my-xxl-5">
     <div class="text-center">
       <h2 class="h1 pb-3 mb-lg-4 text-white">Nos services</h2>
-      <p>Nous proposons une large gamme de services de formalités, adaptés à vos besoins pour simplifier vos démarches
+      <p>Nous proposons une large gamme de services juridiques, adaptés à vos besoins pour simplifier vos démarches
         administratives.</p>
     </div>
     <div
@@ -212,20 +216,20 @@
       <div class="col-lg-5 d-flex pt-3 pt-xl-0">
         <div class="card h-100 border-0 rounded-5 w-100">
           <div class="card-body pb-3 px-3">
-            <img src="assets/img/icons/Apostille.svg" alt="Icon">
-            <h3 class="h4 text-white" routerLink="/services/apostille" style="cursor: pointer;">Apostille & Légalisation
+            <img src="assets/img/icons/Formalite.svg" alt="Icon">
+            <h3 class="h4 text-white" routerLink="/services/formality" style="cursor: pointer;">Formalités légales
             </h3>
-            <p class="mb-0">Authentification et certification rapides et conformes de vos documents valables à
-              l’international.</p>
+            <p class="mb-0">Un accompagnement complet pour toutes vos formalités juridiques.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
-            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" routerLink="/services/apostille"
+            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" routerLink="/services/formality"
               aria-label="Learn more">
               <i class="ai-arrow-right"></i>
             </a>
           </div>
         </div>
       </div>
+
     </div>
 
     <div
@@ -233,12 +237,15 @@
       <div class="col-lg-5 d-flex pt-3 pt-xl-0">
         <div class="card h-100 border-0 rounded-5 w-100">
           <div class="card-body pb-3 px-3">
-            <img src="assets/img/icons/Domiciliation.svg" alt="Icon">
-            <h3 class="h4 text-white" routerLink="/services/domiciliation" style="cursor: pointer;">Domiciliation</h3>
-            <p class="mb-0">Une domiciliation au cœur de Paris avec gestion simplifiée.</p>
+            <img src="assets/img/icons/Apostille.svg" alt="Icon">
+            <h3 class="h4 text-white" routerLink="/services/apostille" style="cursor: pointer;">Apostilles &
+              Légalisations
+            </h3>
+            <p class="mb-0">Authentification et certification rapides et conformes de vos documents valables à
+              l’international.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
-            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" routerLink="/services/domiciliation"
+            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" routerLink="/services/apostille"
               aria-label="Learn more">
               <i class="ai-arrow-right"></i>
             </a>
