--- a/client-myjss/src/app/modules/my-services/components/formality/formality.component.html
+++ b/client-myjss/src/app/modules/my-services/components/formality/formality.component.html
@@ -21,7 +21,7 @@
 <section>
   <div class="jarallax overflow-hidden z-2" data-speed="0.5">
     <div class="jarallax-img"
-      style="background-image: url('/assets/img/myjss-services/formalites/banniere_formalites.png');">
+      style="background-image: url('/assets/img/myjss-services/formalites/banniere_formalite.png');">
     </div>
   </div>
 </section>
@@ -37,6 +37,9 @@
   thirdStepDescription="Naviguez sur une interface sécurisée et optimisée pour un traitement rapide et fiable de vos informations."></explaination-video>
 
 <description-my-account
+  firstStepText="Suivi de votre dossier en ligne via MyJSS et consultation des pièces obligatoires, avec une mise à jour en temps réel de l’avancement."
+  secondStepText="Accédez à l’ensemble de vos dossiers : commandes, devis, et suivez leur statut en temps réel."
+  thirdtepText="Téléchargez facilement tous vos documents importants :   Kbis, certificat de dépôt, acte enregistré, facture et autres documents justificatifs en toute sécurité."
   imageSrc="assets/img/myjss-services/formalites/parcourir_mon_compte_formalite.webp"></description-my-account>
 
 <section *ngIf="carouselFormalityPosts && carouselFormalityPosts.length>0" class="background-opacity">
@@ -126,7 +129,7 @@
       <div class="col">
         <div class="card h-100 border-0 rounded-5 ">
           <div class="card-body pb-3">
-            <img src="assets/img/icons/attestation_immediate.svg" alt="Icon">
+            <img src="assets/img/icons/plateforme_intuitive.svg" alt="Icon">
             <h3 class="h4 text-white">Plateforme intuitive</h3>
             <p class="mb-0">Effectuez vos formalités et demandes de devis en quelques clics.</p>
           </div>
@@ -205,7 +208,7 @@
     <div class="col-md-6 position-relative pb-3 pb-md-0 mb-2 mb-sm-3 mb-md-0">
       <div class="binded-content z-2">
         <div class="binded-item active" id="image1">
-          <img class="d-block rounded-5" src="assets/img/myjss-services/formalites/externaliser_formalites.jpg"
+          <img class="d-block rounded-5" src="assets/img/myjss-services/formalites/externaliser_formalites.png"
             alt="Image">
         </div>
       </div>
@@ -272,7 +275,8 @@
         <div class="card h-100 border-0 rounded-5 w-100">
           <div class="card-body pb-3 px-3">
             <img src="assets/img/icons/Apostille.svg" alt="Icon">
-            <h3 class="h4 text-white" routerLink="/services/apostille" style="cursor: pointer;">Apostille & Légalisation
+            <h3 class="h4 text-white" routerLink="/services/apostille" style="cursor: pointer;">Apostilles &
+              Légalisations
             </h3>
             <p class="mb-0">Authentification et certification rapides et conformes de vos documents valables à
               l’international.</p>
