--- a/client-myjss/src/app/modules/profile/components/footer/footer.component.html
+++ b/client-myjss/src/app/modules/profile/components/footer/footer.component.html
@@ -80,7 +80,7 @@
               LOCALISATION
             </div>
             <div class="footer-body">
-              <p class="mb-0">10 Bd Haussmann,</p>
+              <p class="mb-0">10 Bd Haussmann</p>
               <p>75009 Paris</p>
               <a class="mb-0" href="mailto:contact@jss.fr">contact&#64;jss.fr</a>
               <p>01 47 03 10 10</p>
